--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
     "import re\n",
     "\n",
     "input_string = \"My favorite number is 8\" # an example of possible input\n",
-    "hasNumber = re.search(r'8', input_string)"
+    "hasNumber = re.search(r'\\d', input_string)"
    ]
   },
   {
@@ -1265,21 +1265,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "06c70a5f-c5b5-4e86-b438-cb711f55c8d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#si-date-\n",
     "\n",
+    "#si-date-check\n",
     "import re\n",
     "\n",
     "def dateCheck(s: str) -> bool:\n",
-    "    # Day: 01–09,10–29,30,31  → (0[1-9]|[12][0-9]|3[01])\n",
-    "    # Month: 01–09,10,11,12   → (0[1-9]|1[0-2])\n",
-    "    # Year:  four digits      → \\d{4}\n",
+    " \n",
     "    pattern = r'^(0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[0-2])-\\d{4}$'\n",
-    "    return re.fullmatch(pattern, s) is not None"
+    "    return re.fullmatch(pattern, s) is not None\n"
    ]
   },
   {
