--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "26ec792d-757e-4653-b04b-cff55c8053d1",
    "metadata": {},
    "outputs": [],
@@ -851,8 +851,12 @@
     "\n",
     "import re\n",
     "\n",
-    "input_string = \"My favorite number is 8\" # an example of possible input\n",
-    "hasNumber = re.search(r'\\d', input_string)"
+    "try:\n",
+    "    input_string\n",
+    "except NameError:\n",
+    "    input_string = \"\"\n",
+    "\n",
+    "hasNumber = re.search(r'(?<!\\d)\\d(?!\\d)', input_string)\n"
    ]
   },
   {
